--- a/_data/bio.yml
+++ b/_data/bio.yml
@@ -1,6 +1,6 @@
 # Bio
 image: bradwade-crop-6U9O0340.jpg
-short: I am a front-end web developer, Drupal specialist, and a musician. [Find out more about me...](/about/)
+short: I am a front-end web developer, Drupal specialist, and musician. [Find out more about me...](/about/)
 links:
   - title: LinkedIn
     url: http://www.linkedin.com/in/bradlywade
